--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -5,17 +5,24 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="main.css">
   <!-- Bootstrap CSS -->
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  {% block link %}{% endblock link %}
+  
   <title>{% block title %}{% endblock title %} | Ashrot IceCreams</title>
   <style>
+    *{
+      font-family: 'Roboto';
+      
+    }
     .cart_count {
       display: block;
       text-align: center;
@@ -27,7 +34,10 @@
       font-size: 14px;
       margin-left: 5px;
     }
-
+    .nav-link{
+      color: #800000;
+      font-weight: 500;
+    }
     .cart-icon {
       width: 50px;
       display: inline-block;
@@ -38,9 +48,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+  <nav class="navbar navbar-expand-lg  bg-light sticky-lg-top sticky-md-top sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Ashrot IceCreams</a>
+      <a class="navbar-brand" href="#"><img src="/static/img/logo.png" height="70px" width="120px" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -70,11 +80,11 @@
             <a class="nav-link" href="/contact">Contact Us</a>
           </li>
         </ul>
-
-        <a href="/cart" class="cart-icon" id="pop">
+        <a href="/cart" class="cart-icon btn" id="buttonSelf" type="submit">
           <span id="cart_quantity" class="cart_count">0</span>
-          <i class="fas fa-cart-plus"></i>
+          <i class="fas fa-shopping-cart"></i>
         </a>
+      </form>
       </div>
     </div>
     </div>
@@ -85,6 +95,7 @@
   {% block body %}
 
   {% endblock body %}
+ 
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -98,15 +109,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-
-  <script>
-    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-      return new bootstrap.Popover(popoverTriggerEl)
-
-    })
-    document.getElementById("pop").setAttribute('data-bs-content', '<h5>Cart for your items in my shopping cart</h5>');
-  </script>
+  {% block js %}
+  
+  {% endblock js %}
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
