--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -50,7 +50,7 @@
 <body>
   <nav class="navbar navbar-expand-lg  bg-light sticky-lg-top sticky-md-top sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="/static/img/logo.png" height="70px" width="120px" alt=""></a>
+      <a class="navbar-brand" href="#"><img  src="/static/img/shriyam.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
